--- a/src/styles/tailwind.sass
+++ b/src/styles/tailwind.sass
@@ -1,2 +1,9 @@
+body
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-content: center
+    margin: 10%
+
 form 
-    height: 500px
+    height: 80vh
