Fixed form dimensions and page padding.

--- a/src/styles/tailwind.sass
+++ b/src/styles/tailwind.sass
@@ -1,9 +1,12 @@
 body
     display: flex
     flex-direction: column
-    justify-content: center
+    justify-items: center
     align-content: center
-    margin: 10%
+    padding-left: 5%
+    padding-right: 5%
+    overflow: hidden
 
 form 
-    height: 80vh
+    min-height: 400px
+    max-height: 500px
