Updated validation function.

--- a/src/styles/tailwind.sass
+++ b/src/styles/tailwind.sass
@@ -8,5 +8,6 @@ body
     overflow: hidden
 
 form 
-    min-height: 400px
-    max-height: 500px
+    height: 80vh
+    min-height: 500px
+    max-height: 550px
